(lang dune 3.6)

(source
 (github matijapretnar/wasm-spec-dsl))

(authors "Matija Pretnar")

(maintainers "Matija Pretnar")

(license LICENSE)

(documentation https://github.com/matijapretnar/wasm-spec-dsl/blob/main/README.md)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
